--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sonner": "^1.7.1"
+    "sonner": "^1.7.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
