--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "sonner": "^1.7.1",
     "tailwindcss-animate": "^1.0.7"
   },
