--- a/package.json
+++ b/package.json
@@ -11,15 +11,27 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@nextui-org/react": "^2.6.11",
+    "@tabler/icons-react": "^3.28.1",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "css-loader": "^7.1.2",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
+    "react-scroll-parallax": "^3.4.5",
+    "react-slick": "^0.30.3",
     "sonner": "^1.7.1",
-    "tailwindcss-animate": "^1.0.7"
+    "style-loader": "^4.0.0",
+    "swiper": "^11.2.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
