--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-swipeable": "^7.0.2",
     "sonner": "^1.7.1",
+    "swiper": "^11.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
